meta tags, minor style, favicon

--- a/www/index.html
+++ b/www/index.html
@@ -3,25 +3,27 @@
 
 <head>
   <meta charset="utf-8">
-  <title>sdixon</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="description" content="personal website of Sam Dixon."/>
+  <meta name="author" content="Sam Dixon"/>
+  <meta name="keywords" content="Sam Dixon Indianapolis IN"/>
 
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
-
+  <link rel="icon" href="/static/img/wizard.png" sizes="any">
+  <link rel="apple-touch-icon" href="/static/img/wizard.png">
   <link rel="stylesheet" href="/static/normalize.css">
   <link rel="stylesheet" href="/static/styles.css">
+
+  <title>| sam dixon</title>
 </head>
 
 <body>
     <div id="wrapper">
         <nav>
-            <h4>Sam Dixon</h4>
+            <h4>sam dixon</h4>
             <ul>
-                <li><a href="mailto:sdixon@posteo.net">email</a></li>
-                <li><a href="https://github.com/samdixon/resume/blob/d5df380e310151aea7ab1cec377bb5dd977a68b0/samuel-dixon-resume.pdf" target="_">resume</a></li>
-                <li><a href="https://plan.cat/~sdixon" target="_">plan</a></li>
+                <li>| <a href="mailto:sdixon@posteo.net">email</a></li>
+                <li>| <a href="https://github.com/samdixon/resume/blob/d5df380e310151aea7ab1cec377bb5dd977a68b0/samuel-dixon-resume.pdf" target="_">resume</a></li>
+                <li>| <a href="https://plan.cat/~sdixon" target="_">plan</a></li>
         </nav>
     </div>
 </body>
