--- a/www/index.html
+++ b/www/index.html
@@ -9,15 +9,15 @@
   <link rel="stylesheet" href="/static/normalize.css">
   <link rel="stylesheet" href="/static/styles.css">
   <link rel="icon" href="/static/img/wizard.png" sizes="any">
-  <title>| sam dixon</title>
+  <title>sdixon</title>
 </head>
 <body>
     <div id="wrapper">
         <nav>
             <h4>sam dixon</h4>
             <ul>
-                <li>| <a href="mailto:sdixon@posteo.net">email</a></li>
-                <li>| <a href="https://github.com/samdixon/resume/blob/d5df380e310151aea7ab1cec377bb5dd977a68b0/samuel-dixon-resume.pdf" target="_">resume</a></li>
+                <li>｜<a href="mailto:sdixon@posteo.net">email</a></li>
+                <li>｜<a href="https://github.com/samdixon/resume/blob/d5df380e310151aea7ab1cec377bb5dd977a68b0/samuel-dixon-resume.pdf" target="_">resume</a></li>
         </nav>
     </div>
 </body>
