--- a/www/index.html
+++ b/www/index.html
@@ -14,10 +14,13 @@
 <body>
     <div id="wrapper">
         <nav>
-            <h4>sam dixon</h4>
             <ul>
-                <li>｜<a href="mailto:sdixon@posteo.net">email</a></li>
-                <li>｜<a href="https://github.com/samdixon/resume/blob/d5df380e310151aea7ab1cec377bb5dd977a68b0/samuel-dixon-resume.pdf" target="_">resume</a></li>
+                <li><b>{</b></li>
+                <li>"sam dixon",</li>
+                <li><a href="mailto:sdixon@posteo.net">"email"</a>,</li>
+                <li><a href="https://github.com/samdixon/resume/blob/d5df380e310151aea7ab1cec377bb5dd977a68b0/samuel-dixon-resume.pdf" target="_">"resume"</a>,</li>
+                <li><b>}</b></li>
+            </ul>
         </nav>
     </div>
 </body>
